--- a/package.json
+++ b/package.json
@@ -26,8 +26,15 @@
   },
   "devDependencies": {
     "autoprefixer": "^7.1.1",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-preset-env": "^1.6.0",
     "browser-sync": "^2.18.12",
     "del": "^3.0.0",
+    "eslint": "^4.3.0",
+    "eslint-config-airbnb-base": "^11.3.0",
+    "eslint-loader": "^1.9.0",
+    "eslint-plugin-import": "^2.7.0",
     "gulp": "^3.9.1",
     "gulp-clean-css": "^3.4.2",
     "gulp-imagemin": "^3.3.0",
