--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/zsoltime/fcc-tribute#readme",
   "dependencies": {
     "normalize.css": "^7.0.0",
+    "particles.js": "^2.0.0",
     "smoothscroll-polyfill": "^0.3.5"
   },
   "devDependencies": {
