--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fcc-tribute",
   "version": "0.1.0",
   "description": "FreeCodeCamp tribute page",
-  "main": "index.js",
+  "main": "",
   "scripts": {
     "start": "gulp",
     "test": "echo \"Error: no test specified\" && exit 1"
